<resources>
    <string name="app_name">ExpenseTrackingApp</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="money">$0</string>
    <string name="categories">Categories</string>
    <string name="category">Category</string>
    <string name="transactions">Transactions</string>
    <string name="transaction">Transaction</string>
    <string name="details">Transaction Details</string>
    <string name="description">Description</string>
    <string name="addTransaction">Add a Transaction</string>
    <string name="save">SAVE</string>

</resources>