<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:translationX="5dp"
        android:translationY="0dp"
        android:src="@drawable/image"/>

    <TextView
        android:id="@+id/txtName"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/image"
        android:text="@string/transaction"
        android:translationY="2dp" />

    <TextView
        android:id="@+id/txtDate"
        style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtName"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/image"
        android:maxLength="50"
        android:maxLines="2"
        android:singleLine="true"
        android:text="@string/date"
        android:textColor="#777474"
        android:textSize="14sp"
        android:textStyle="italic"
        android:translationY="2dp" />

    <TextView
        android:id="@+id/txtAmount"
        style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:layout_toEndOf="@id/image"
        android:text="@string/money"
        android:textColor="#E60F0F"
        android:textStyle="bold"
        android:translationY="15dp" />



</RelativeLayout>